[gd_scene load_steps=4 format=2]

[ext_resource path="res://game_world/game_world.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://ui/gui.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="GameWorld" parent="." instance=ExtResource( 1 )]

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="GUILayer" instance=ExtResource( 3 )]
[connection signal="game_load_finished" from="GUILayer/GUI" to="." method="_input_after_load"]
[connection signal="load_game" from="GUILayer/GUI" to="." method="load_game"]
[connection signal="new_game" from="GUILayer/GUI" to="." method="_start_new_game"]
[connection signal="quit_game" from="GUILayer/GUI" to="." method="quit_game"]
